fix alignment of unread badges for discussion group list
fixes CNVS-5308

test plan
- create a group discussion with more than one group having replies
 unread by a teacher
- as a teacher, view the course level discussion
- ensure that the list of groups have badges indicating the number
 of unread messages for each group and that the badges line up

Reviewed-on: https://gerrit.instructure.com/19596
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Marc LeGendre <marc@instructure.com>
Product-Review: Marc LeGendre <marc@instructure.com>

--- a/app/stylesheets/discussions.scss
+++ b/app/stylesheets/discussions.scss
@@ -61,7 +61,6 @@ body.with-right-side.with-left-side {
 
 .new-and-total-badge {
   float: right;
-  margin-top: 10px;
 }
 
 .reply-textarea {
